--- a/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/index.xhtml
+++ b/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/index.xhtml
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
             
             <hr></hr>
-            <p style="color:white; font-size: 20px;"> Bienvenido *** (Nivel: ***) | <a style="color:white;" href=""> | Cerrar | </a></p> 
+            <p style="color:white; font-size: 20px;"> Bienvenido #{usuariosMBean.usuario} (Nivel: #{usuariosMBean.nivel}) | <a style="color:white;" href=""> | Cerrar | </a></p> 
             <hr></hr>
             
         </nav>
