--- a/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/vistas/Telefono.xhtml
+++ b/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/vistas/Telefono.xhtml
@@ -35,9 +35,11 @@
     <h:body>
         <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
             
+            <h:form style="margin-left: 37%">
             <hr></hr>
-            <p style="color:white; font-size: 20px;"> Bienvenido <h:outputText value="#{sessionScope['username']}"></h:outputText> (Nivel: <h:outputText value="#{sessionScope['level']}"></h:outputText>) | <a style="color:white;" href="../index.xhtml"> | Home | </a></p> 
+            <p style="color:white; font-size: 20px;"> Bienvenido <h:outputText value="#{sessionScope['username']}"></h:outputText> (Nivel: <h:outputText value="#{sessionScope['level']}"></h:outputText>) | <h:commandLink action="#{telefonoMBean.indexsesion}" value="Home"></h:commandLink></p> 
             <hr></hr>
+            </h:form>
             
         </nav>
 
