--- a/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/index.xhtml
+++ b/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/index.xhtml
@@ -39,7 +39,7 @@
                 <h:commandLink action="#{departamentosMBean.sesion}" value="Mantenimiento Departamentos"></h:commandLink>
             </li>
             <li style="margin-left: 75px">
-                <h:commandLink action="#{departamentosMBean.sesion}" value="Mantenimiento Empleados"></h:commandLink>
+                <h:commandLink action="#{empleadoMBean.sesion}" value="Mantenimiento Empleados"></h:commandLink>
             </li>
         </lable>
         </h:form> 
