--- a/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/login/login_index.xhtml
+++ b/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/login/login_index.xhtml
@@ -37,8 +37,9 @@
 		<br></br><br></br>
 		
                 <h:commandButton class="btn btn-success" id="btnIngresar" action="#{usuariosMBean.validateUsernamePassword}" value="Login"></h:commandButton>
-                
-                <h:commandButton class="btn btn-secondary" id="btnNuevo" action="#{usuariosMBean.validateUsernamePassword}" value="Crear Cuenta"></h:commandButton>
+                <br></br><br></br>
+                <h:outputText value="¿No tienes cuenta?"></h:outputText>
+                <h:commandLink value="Crear" action="Cuenta.xhtml"></h:commandLink>
 	</h:form>
         </div>
     
