--- a/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/login/Cuenta.xhtml
+++ b/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/login/Cuenta.xhtml
@@ -35,11 +35,11 @@
     </h:head>
 
     <h:body>
-        <nav class="navbar navbar-expand navbar-dark bg-dark static-top">
+        <nav style="background-color:#0090b8 " class="navbar navbar-expand navbar-light static-top">
             
             <h:form style="margin-left: 32%">
             <hr></hr>
-            <p style="color:white; font-size: 20px;"> BIENVENIDOS A SU SISTEMA DE MANTENIMIENTO | <h:commandLink action="login_index.xhtml" value="Login"></h:commandLink></p> 
+            <p style="color:white; font-weight: bold; font-size: 20px;"> BIENVENIDOS A SU SISTEMA DE MANTENIMIENTO | <h:commandLink style="color:white" action="login_index.xhtml" value="Login"></h:commandLink></p> 
             <hr></hr>
             </h:form>
             
