--- a/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/index.xhtml
+++ b/OneDrive/Escritorio/Documentos/NetBeansProjects/Examen_Final_DAUTE/web/index.xhtml
@@ -13,7 +13,7 @@
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </h:head>
-    <h:body>
+    <h:body rendered="#{sessionScope['username'] != 'temp'}">
         <nav style="background-color:#0090b8" class="navbar navbar-expand navbar-light static-top">
             <h:form style="margin-left: 4.5%">
             <hr></hr>
