Complete la tabla departamentos

--- a/web/vistas/Empleados.xhtml
+++ b/web/vistas/Empleados.xhtml
@@ -39,9 +39,6 @@
 </h:head>
 
 <h:body rendered="#{sessionScope['username'] != 'temp'}">
-
-
-
     <div class="container-fluid">
         <div class="row">
     <!-- Sidebar -->
@@ -49,10 +46,10 @@
         <ul class="sidebar navbar-nav bg-dark" style="height: 100%; font-size: 20px">
         <br></br>        
         <br></br>
-        <a href="#{request.contextPath}/faces/vistas/vistaDepartamentos.xhtml" class="badge badge-dark"><li>Departamentos</li></a>
-        <a href="#{request.contextPath}/faces/vistas/vistaEmpleados.xhtml" class="badge badge-dark"><li>Empleados</li></a>
-        <a href="#{request.contextPath}/faces/vistas/vistaTelefonos.xhtml" class="badge badge-dark"><li>Telefonos</li></a>
-        <a href="#{request.contextPath}/faces/vistas/vistaUsuarios.xhtml" class="badge badge-dark"><li>Usuarios</li></a>
+        <a href="#{request.contextPath}/faces/vistas/Departamento.xhtml" class="badge badge-dark"><li>Departamentos</li></a>
+        <a href="#{request.contextPath}/faces/vistas/Empleados.xhtml" class="badge badge-dark"><li>Empleados</li></a>
+        <a href="#{request.contextPath}/faces/vistas/Telefono.xhtml" class="badge badge-dark"><li>Telefonos</li></a>
+        <a href="#{request.contextPath}/faces/vistas/Usuarios.xhtml" class="badge badge-dark"><li>Usuarios</li></a>
     </ul>
     </div>
 <div style="width: 90%; text-align: center">
